# xzlang

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  main.xzl  run  run.sh  xzlang
docs/: index.html
example/: hello.xzl  main.xzl
include/: ast.h  compiler.h  eval.h  lexer.h  parser.h  token.h
lib/: math.xzl  net.xzl  tml.xzl
src/: CMakeLists.txt  ast.c  compiler.c  eval.c  lexer.c  main.c  parser.c
test_project/: main.xzl  main2.xzl  my_lib.xzl  xzlang
test_project/testincludeme/: hack_pentaghon.xzl
